force-app/main/default/objects/Labor__c/Labor__c.object-meta.xml
<CustomObject>
    <label>Labor</label>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>Labor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Labor</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>