force-app/main/default/objects/Labor__c/fields/Adjustment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Reason__c</fullName>
    <label>Adjustment Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A/C Tune-up marketing campaign</fullName>
            </value>
            <value>
                <fullName>Customer complaint</fullName>
            </value>
            <value>
                <fullName>Field Manager approved labor adjustment</fullName>
            </value>
            <value>
                <fullName>Heating Tune-up marketing campaign</fullName>
            </value>
            <value>
                <fullName>Flat Rate Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>