force-app/main/default/objects/Labor__c/fields/Adjustment_Value__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Value__c</fullName>
    <label>Adjustment Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>