force-app/main/default/objects/Labor__c/fields/Job_Duration__c.field-meta.xml
<CustomField>
    <fullName>Job_Duration__c</fullName>
    <label>Job Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>